[tool.poetry]
name = "sparse-matrix-plot"
version = "0.1.0"
description = "plot sparse matrix"
authors = ["yuanjie <re.masterzero@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
beautifultable = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
